-- SPDX-License-Identifier: Apache-2.0
-- Copyright 2026 cat-pretrade-data-model contributors
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
-- http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

-- ============================================================================
-- File: 03_venue_model_delta.sql
-- Purpose: Enterprise Venue Model (4 entities, Delta Lake)
-- Net New: venue_trading_session, venue_connectivity
-- ============================================================================

-- ----------------------------------------------------------------------------
-- Entity 1 of 4: venue (enriched) - ENHANCED
-- venue_category, mic_operating, mic_segment, country, timezone
-- ----------------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS venue (
 venue_id STRING NOT NULL COMMENT 'UUID v4 - Primary key',
 operator_party_id STRING COMMENT 'FK to party.party_id - venue operator (e.g., Intercontinental Exchange for XNYS)',
 mic_code STRING NOT NULL COMMENT 'ISO 10383 Market Identifier Code (FK to ref_mic): e.g., XNYS, XNAS, EDGX, BATS',
 mic_operating STRING COMMENT 'NEW - Operating MIC (parent venue); supersedes operating_mic field; e.g., XNYS is operating MIC for ARCX',
 mic_segment STRING COMMENT 'NEW - Segment MIC (sub-venue segment within an operating MIC)',
 venue_name STRING NOT NULL COMMENT 'Full venue name (e.g., New York Stock Exchange, NASDAQ Stock Market, Cboe EDGX)',
 venue_type STRING NOT NULL COMMENT 'DEPRECATED - retained for source compat; prefer venue_category. Values: EXCHANGE, ATS, DARK_POOL, SDP, ECN, OTC_MARKET, SYSTEMATIC_INTERNALIZER',
 venue_category STRING COMMENT 'NEW - Enterprise categorization: EXCHANGE, ATS, DARK_POOL, SI (Systematic Internalizer), OTC, CCP (Central Counterparty), CSD (Central Securities Depository), SEF, MTF, OTF',
 market_category STRING COMMENT 'Asset class category: NMS (equities), OTC, OPTIONS, FIXED_INCOME, DERIVATIVES, DIGITAL_ASSET, FX',
 country STRING COMMENT 'NEW - ISO 3166-1 alpha-2 country of venue; drives regulator assignment and reporting regime',
 timezone STRING COMMENT 'NEW - IANA timezone for venue-local timestamps (e.g., America/New_York, Europe/London, Asia/Tokyo, Asia/Hong_Kong)',
 regulatory_status STRING COMMENT 'SRO, ATS_REGISTERED, EXEMPT, FOREIGN_RECOGNIZED, FINES_REGULATED',
 ats_form_type STRING COMMENT 'For ATSs: ATS-N (NMS stock), ATS-C (options), ATS-R',
 effective_date DATE NOT NULL COMMENT 'SCD2 effective date',
 end_date DATE NOT NULL DEFAULT DATE'9999-12-31' COMMENT 'SCD2 end date',
 _created_at TIMESTAMP GENERATED ALWAYS AS (current_timestamp) COMMENT 'CDF audit',
 _updated_at TIMESTAMP GENERATED ALWAYS AS (current_timestamp) COMMENT 'CDF audit'
)
USING DELTA
COMMENT 'Trading venues - exchanges, ATS, dark pools, SIs, OTC markets, CCPs, CSDs - enriched with venue_category taxonomy, operating/segment MICs, country, and IANA timezone'
PARTITIONED BY (venue_type)
TBLPROPERTIES (
 'delta.autoOptimize.optimizeWrite' = 'true',
 'delta.autoOptimize.autoCompact' = 'true',
 'delta.columnMapping.mode' = 'name',
 'delta.enableChangeDataFeed' = 'true',
 'description' = 'Venue dimension with MIC hierarchy and category taxonomy',
 'compression.codec' = 'zstd',
 'subject_area' = 'venue',
 'source_lineage' = ' Expanded Venue Model'
);

-- Z-ORDER BY (mic_code, venue_category)
-- LIQUID CLUSTERING BY (country, venue_category)

-- ----------------------------------------------------------------------------
-- Entity 2 of 4: venue_asset_class - UNCHANGED PER 
-- Retained from source DDL
-- ----------------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS venue_asset_class (
 venue_id STRING NOT NULL COMMENT 'FK to venue.venue_id',
 asset_class STRING NOT NULL COMMENT 'Asset class supported: EQUITY, OPTION, FIXED_INCOME, FX, COMMODITY, DIGITAL_ASSET, DERIVATIVE',
 trading_protocol STRING COMMENT 'Trading mechanism: CONTINUOUS, AUCTION, RFQ, HYBRID, PERIODIC_AUCTION, DARK_MID, PRICE_IMPROVEMENT',
 effective_date DATE NOT NULL COMMENT 'SCD2 effective date',
 end_date DATE NOT NULL DEFAULT DATE'9999-12-31' COMMENT 'SCD2 end date',
 _created_at TIMESTAMP GENERATED ALWAYS AS (current_timestamp) COMMENT 'CDF audit',
 _updated_at TIMESTAMP GENERATED ALWAYS AS (current_timestamp) COMMENT 'CDF audit'
)
USING DELTA
COMMENT 'Venue asset class support matrix - which asset classes trade on which venue and via what protocol (retained unchanged per)'
PARTITIONED BY (asset_class)
TBLPROPERTIES (
 'delta.autoOptimize.optimizeWrite' = 'true',
 'delta.autoOptimize.autoCompact' = 'true',
 'delta.columnMapping.mode' = 'name',
 'delta.enableChangeDataFeed' = 'true',
 'description' = 'Asset classes traded on each venue',
 'compression.codec' = 'zstd',
 'subject_area' = 'venue',
 'source_lineage' = ' Expanded Venue Model (retained)'
);

-- Z-ORDER BY (venue_id, asset_class)

-- ----------------------------------------------------------------------------
-- Entity 3 of 4: venue_trading_session (NEW)
-- Trading hours and session schedules per venue
-- ----------------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS venue_trading_session (
 session_id STRING NOT NULL COMMENT 'UUID v4 - Primary key',
 venue_id STRING NOT NULL COMMENT 'FK to venue.venue_id',
 session_type STRING NOT NULL COMMENT 'Session phase: PRE_MARKET, OPENING_AUCTION, CONTINUOUS, MIDDAY_AUCTION, CLOSING_AUCTION, AFTER_HOURS, EXTENDED_HOURS, OVERNIGHT',
 open_time STRING NOT NULL COMMENT 'Session open in HH:MM:SS format (venue-local)',
 close_time STRING NOT NULL COMMENT 'Session close in HH:MM:SS format (venue-local)',
 timezone STRING NOT NULL COMMENT 'IANA timezone of open_time/close_time (e.g., America/New_York)',
 day_of_week STRING COMMENT 'Day mask: MON, TUE, WED, THU, FRI, SAT, SUN, or WEEKDAY, WEEKEND, ALL; drives weekday/weekend session schedules',
 applies_from DATE COMMENT 'Session schedule applies from date (for schedule changes)',
 applies_to DATE COMMENT 'Session schedule applies to date (null = indefinite)',
 holiday_schedule_id STRING COMMENT 'FK to holiday calendar identifier (for holiday closures / early closes)',
 _created_at TIMESTAMP GENERATED ALWAYS AS (current_timestamp) COMMENT 'CDF audit',
 _updated_at TIMESTAMP GENERATED ALWAYS AS (current_timestamp) COMMENT 'CDF audit'
)
USING DELTA
COMMENT 'Trading session schedules per venue - PRE_MARKET / CONTINUOUS / AUCTION / CLOSING / AFTER_HOURS; drives timestamp validation and session attribution for regulatory reporting'
PARTITIONED BY (session_type)
TBLPROPERTIES (
 'delta.autoOptimize.optimizeWrite' = 'true',
 'delta.autoOptimize.autoCompact' = 'true',
 'delta.columnMapping.mode' = 'name',
 'delta.enableChangeDataFeed' = 'true',
 'description' = 'Trading hours and session schedules per venue',
 'compression.codec' = 'zstd',
 'subject_area' = 'venue',
 'source_lineage' = ' Expanded Venue Model'
);

-- Z-ORDER BY (venue_id, session_type)

-- ----------------------------------------------------------------------------
-- Entity 4 of 4: venue_connectivity (NEW)
-- Firm's connectivity to each venue (DMA, SOR, FIX sessions)
-- ----------------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS venue_connectivity (
 connectivity_id STRING NOT NULL COMMENT 'UUID v4 - Primary key',
 venue_id STRING NOT NULL COMMENT 'FK to venue.venue_id',
 party_role_id STRING NOT NULL COMMENT 'FK to party_role.party_role_id - firm or trading entity with the connection',
 connection_type STRING NOT NULL COMMENT 'Wire / protocol: FIX (4.2/4.4/5.0 SP2), BINARY (ITCH/OUCH/OEF), REST_API, WEBSOCKET, PROPRIETARY, CME_MDP, SOUPBINTCP',
 connection_purpose STRING COMMENT 'Purpose: MARKET_DATA, ORDER_ENTRY, DROP_COPY, CLEARING_REPORT, ALLOCATIONS',
 fix_sender_comp_id STRING COMMENT 'FIX tag 49 - SenderCompID for outgoing (firm''s FIX session identifier)',
 fix_target_comp_id STRING COMMENT 'FIX tag 56 - TargetCompID for incoming (venue''s FIX session identifier)',
 fix_version STRING COMMENT 'FIX protocol version (FIX.4.2, FIX.4.4, FIXT.1.1/FIX.5.0SP2)',
 primary_ip STRING COMMENT 'Primary connection IP (infrastructure attribute)',
 backup_ip STRING COMMENT 'Backup IP for failover',
 connection_status STRING NOT NULL COMMENT 'Status: ACTIVE, SUSPENDED, PROVISIONING, DECOMMISSIONED',
 latency_target_ms DECIMAL(10,3) COMMENT 'Target round-trip latency in milliseconds (for low-latency gating)',
 effective_date DATE NOT NULL COMMENT 'SCD2 effective date',
 end_date DATE NOT NULL DEFAULT DATE'9999-12-31' COMMENT 'SCD2 end date',
 _created_at TIMESTAMP GENERATED ALWAYS AS (current_timestamp) COMMENT 'CDF audit',
 _updated_at TIMESTAMP GENERATED ALWAYS AS (current_timestamp) COMMENT 'CDF audit'
)
USING DELTA
COMMENT 'Firm-to-venue connectivity matrix - FIX sessions, binary protocols, REST/WebSocket; captures SenderCompID/TargetCompID for session-to-venue reconciliation and latency targets'
PARTITIONED BY (connection_type)
TBLPROPERTIES (
 'delta.autoOptimize.optimizeWrite' = 'true',
 'delta.autoOptimize.autoCompact' = 'true',
 'delta.columnMapping.mode' = 'name',
 'delta.enableChangeDataFeed' = 'true',
 'description' = 'Firm-to-venue connectivity matrix with FIX session IDs and latency targets',
 'compression.codec' = 'zstd',
 'subject_area' = 'venue',
 'source_lineage' = ' Expanded Venue Model'
);

-- Z-ORDER BY (venue_id, party_role_id, connection_status)

-- ============================================================================
-- END OF FILE - 4 CREATE TABLE statements
-- ============================================================================
